src/test/ui/impl-trait/multiple-lifetimes/ordinary-bounds-unsuited.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ordinary-bounds-unsuited.rs:18:62
   |
LL | fn upper_bounds<'a, 'b>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'a, 'b>
   |                                                              ^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Ordinary<'_>` captures the scope of call-site for function at 20:1
  --> $DIR/ordinary-bounds-unsuited.rs:20:1
   |
LL | / {
LL | |     // We return a value:
LL | |     //
LL | |     // ```
...  |
LL | |     if condition() { a } else { b }
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
